samples/_failures_safe/1761413328_b23514_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fa588cf6.c: In function ‘main’:
./samples/SAFE/__tmp_fa588cf6.c:175:20: error: expected ‘]’ at end of input
  175 |     char input[1024
      |                    ^
      |                    ]
./samples/SAFE/__tmp_fa588cf6.c:175:5: error: expected declaration or statement at end of input
  175 |     char input[1024
      |     ^~~~
